kibana/kibana-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: eparis-kibana-logging
  labels:
    k8s-app: kibana-logging
    kubernetes.io/cluster-service: "true"
    addonmanager.kubernetes.io/mode: Reconcile
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: kibana-logging
  template:
    metadata:
      labels:
        k8s-app: kibana-logging
    spec:
      serviceAccountName: eparis-elasticsearch-logging
      containers:
      - name: eparis-kibana-logging
        image: docker.elastic.co/kibana/kibana:5.6.2
        resources:
          # need more cpu upon initialization, therefore burstable class
          limits:
            cpu: 1000m
          requests:
            cpu: 100m
        ports:
        - containerPort: 5601
          name: ui
          protocol: TCP
