kibana/kibana-route.yaml
apiVersion: v1
kind: Route
metadata:
  labels:
    name: eparis-kibana
  name: eparis-kibana
spec:
  port:
    targetPort: ui
  to:
    kind: Service
    name: eparis-kibana-logging
